<resources>
    <string name="app_name">Material Desing</string>
    <string name="ava">Avançar</string>
    <string name="retornar">Retornar</string>
    <string name="cozy">Cozy Images !</string>
    <string name="algumas_pixel">Algumas pixel arts legais !</string>
    <string name="cidade_as_margens">Uma cidade as margens.</string>
    <string name="alvorada_do_entardecer">Alvorada do entardecer !</string>
    <string name="cyberpunk_city">CyberPunk city !</string>
    <string name="beco_da_meia_noite">Beco da meia noite !</string>
</resources>